Using Intersection Observer API to observe when a section is visible, and fixed header when not visible.

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -20,6 +20,12 @@
             margin-bottom: 0;
         }
     }
+
+    &.fixed {
+        position: fixed;
+        width: 100%;
+        box-shadow: 0 0.3rem 0.4rem;
+    }
 }
 
 .nav-principal {
